--- a/CaseStudy Module 1/style.css
+++ b/CaseStudy Module 1/style.css
@@ -34,5 +34,8 @@ div.form-student input[type="text"]{
 div.form-student button{
     margin-top: 15px;
 }
+.hide {
+    border:  0px ;
+    background-color: transparent;
 
-
+}
